<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/online_background"
    tools:context="com.fpl.myapp.activity.online.OnlineActivity" >

    <TextView
        android:id="@+id/TextView1"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_alignParentTop="true"
        android:background="#3f51b5"
        android:gravity="center"
        android:text="@string/onlineTitle"
        android:textColor="#ffffff"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/TextView2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/TextView1"
        android:background="@android:color/darker_gray" />

    <com.fpl.myapp.ui.ArcProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/TextView2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp" />

    <RelativeLayout
        android:id="@+id/rl_online"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/progressBar" >

        <TextView
            android:id="@+id/tv_line"
            android:layout_width="1dp"
            android:layout_height="1dp"
            android:layout_centerInParent="true" />

        <ImageView
            android:id="@+id/iv_online_send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="56dp"
            android:layout_marginTop="12dp"
            android:src="@drawable/online_send_selector" />

        <ImageView
            android:id="@+id/iv_online_return"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@+id/iv_online_send"
            android:layout_marginRight="56dp"
            android:src="@drawable/online_return_selector" />

        <TextView
            android:id="@+id/tv_online_send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/iv_online_send"
            android:layout_alignRight="@+id/iv_online_send"
            android:layout_below="@+id/iv_online_send"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/btnSend"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_online_return"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/tv_online_send"
            android:layout_alignLeft="@+id/iv_online_return"
            android:layout_alignRight="@+id/iv_online_return"
            android:layout_below="@+id/iv_online_return"
            android:gravity="center"
            android:text="@string/btnReturn"
            android:textSize="16sp" />
    </RelativeLayout>

    <TextView
        android:id="@+id/TextView3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/rl_online"
        android:background="@android:color/darker_gray" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/TextView3" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/onlineText"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:padding="3dp"
            android:text="@string/fpl" />
    </RelativeLayout>

</RelativeLayout>