<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.fpl.myapp.activity.information.ICInformationActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="#3F51B5"
        android:gravity="center_vertical" >

        <ImageButton
            android:id="@+id/ib_quit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/quit_selector" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="3dp"
            android:text="个人信息"
            android:textColor="#ffffff"
            android:textSize="20sp" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#303f9f" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <TextView
            android:id="@+id/tv_line_icinfo"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_centerInParent="true" />

        <TextView
            android:id="@+id/tv_ivinfo_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/tv_line_icinfo"
            android:paddingLeft="15dp"
            android:text="@string/number"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_icinfo_number_show"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/tv_ivinfo_number"
            android:layout_toRightOf="@+id/tv_ivinfo_number"
            android:minEms="7"
            android:paddingLeft="3dp"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_icinfo_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_line_icinfo"
            android:paddingLeft="15dp"
            android:text="@string/name"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_icinfo_name_show"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/tv_icinfo_name"
            android:layout_alignLeft="@+id/tv_icinfo_number_show"
            android:paddingLeft="3dp"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_icinfo_gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/tv_icinfo_name"
            android:layout_centerHorizontal="true"
            android:paddingLeft="50dp"
            android:text="@string/gender"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_icinfo_gender_show"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/tv_icinfo_name"
            android:layout_toRightOf="@+id/tv_icinfo_gender"
            android:paddingLeft="3dp"
            android:textSize="20sp" />
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#808080" />

    <ListView
        android:id="@+id/lv_icinfo"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:background="#eeeeee"
        android:divider="@null" >
    </ListView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#808080" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="#eeeeee"
        android:layout_weight="1" >

        <TextView
            android:id="@+id/tv_icinfo_show"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="请刷卡"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:padding="3dp"
            android:text="@string/fpl" />
    </RelativeLayout>

</LinearLayout>