<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="#3f51b5"
        android:gravity="center_vertical" >

        <ImageButton
            android:id="@+id/ib_hw_quit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/quit_selector"
            android:contentDescription="@null" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="3dp"
            android:text="@string/perInfo"
            android:textColor="#ffffff"
            android:textSize="20sp" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#cccccc" />

    <TextView
        android:id="@+id/tv_hw_title"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/HeiWei"
        android:textSize="20sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#808080" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2.5" >

        <TextView
            android:id="@+id/tv_hw_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:padding="5dp"
            android:text="@string/name"
            android:textSize="20sp"
            tools:ignore="RtlHardcoded" />

        <TextView
            android:id="@+id/tv_hw_gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/tv_hw_name"
            android:layout_below="@+id/tv_hw_name"
            android:padding="5dp"
            android:text="@string/gender"
            android:textSize="20sp"
            tools:ignore="RtlHardcoded" />

        <TextView
            android:id="@+id/tv_hw_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/tv_hw_name"
            android:layout_alignLeft="@+id/tv_hw_name"
            android:padding="5dp"
            android:text="@string/number"
            android:textSize="20sp"
            tools:ignore="RtlHardcoded" />

        <TextView
            android:id="@+id/tv_name_edit_HW"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/tv_hw_name"
            android:text="哈哈"
            android:textSize="20sp"
            tools:ignore="RtlHardcoded" />

        <TextView
            android:id="@+id/tv_number_edit_HW"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/tv_hw_number"
            android:layout_alignBottom="@+id/tv_hw_number"
            android:layout_toRightOf="@+id/tv_hw_number"
            android:text="123456789011"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_gender_edit_HW"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/tv_hw_gender"
            android:layout_alignBottom="@+id/tv_hw_gender"
            android:layout_toRightOf="@+id/tv_hw_gender"
            android:text="男"
            android:textSize="20sp" />
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#808080" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2" >

        <TextView
            android:id="@+id/tv_line1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_centerInParent="true" />

        <TextView
            android:id="@+id/tv_w_unit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/et_weight_edit"
            android:layout_toRightOf="@+id/et_weight_edit"
            android:text="公斤"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_h_unit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/et_height_edit"
            android:layout_toRightOf="@+id/et_height_edit"
            android:text="厘米"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_hw_height"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/tv_line1"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="20dp"
            android:padding="5dp"
            android:text="身高："
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_hw_weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/tv_line1"
            android:layout_marginLeft="20dp"
            android:padding="5dp"
            android:text="体重："
            android:textSize="20sp" />

        <EditText
            android:id="@+id/et_height_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/tv_line1"
            android:layout_toRightOf="@+id/tv_hw_height"
            android:gravity="center"
            android:minEms="3"
            android:numeric="integer|decimal"
            android:singleLine="true"
            android:text="178"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/et_weight_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/tv_hw_weight"
            android:layout_toRightOf="@+id/tv_hw_weight"
            android:ems="10"
            android:gravity="center"
            android:minEms="3"
            android:numeric="integer|decimal"
            android:singleLine="true"
            android:text="70"
            android:textSize="20sp" />
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#808080" />

    <LinearLayout
        android:id="@+id/ll_hw_Vison"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:visibility="gone" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:padding="5dp"
            android:text="@string/range"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/et_hw_min"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:enabled="false"
            android:gravity="center"
            android:hint="@string/min"
            android:minEms="3"
            android:singleLine="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="--"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/et_hw_max"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:enabled="false"
            android:gravity="center"
            android:hint="@string/max"
            android:minEms="3"
            android:singleLine="true" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_hw"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:padding="5dp"
            android:text="@string/range"
            android:textSize="20sp" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent" >

            <EditText
                android:id="@+id/et_h_min"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/line"
                android:background="@null"
                android:enabled="false"
                android:gravity="center"
                android:hint="@string/min"
                android:minEms="3"
                android:singleLine="true" />

            <TextView
                android:id="@+id/tv_line"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/et_h_min"
                android:layout_toRightOf="@+id/et_h_min"
                android:text="--"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/line"
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_centerInParent="true" />

            <EditText
                android:id="@+id/et_h_max"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/et_h_min"
                android:layout_toRightOf="@+id/tv_line"
                android:background="@null"
                android:enabled="false"
                android:gravity="center"
                android:hint="@string/max"
                android:minEms="3"
                android:singleLine="true" />

            <EditText
                android:id="@+id/et_w_min"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/line"
                android:background="@null"
                android:enabled="false"
                android:gravity="center"
                android:hint="@string/min"
                android:minEms="3"
                android:singleLine="true" />

            <TextView
                android:id="@+id/tv_line0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/et_w_min"
                android:layout_toRightOf="@+id/et_w_min"
                android:text="--"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/et_w_max"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/et_w_min"
                android:layout_toRightOf="@+id/tv_line0"
                android:background="@null"
                android:enabled="false"
                android:gravity="center"
                android:hint="@string/max"
                android:minEms="3"
                android:singleLine="true" />
        </RelativeLayout>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#808080" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2" >

        <Button
            android:id="@+id/btn_hw_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:background="@drawable/circle_corner_button_selector"
            android:text="取消"
            android:textColor="#ffffff" />

        <Button
            android:id="@+id/btn_hw_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="20dp"
            android:background="@drawable/circle_corner_button_selector"
            android:text="保存"
            android:textColor="#ffffff" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:padding="3dp"
            android:text="@string/fpl" />

        <TextView
            android:id="@+id/tv_line"
            android:layout_width="1dp"
            android:layout_height="1dp"
            android:layout_centerInParent="true" />

        <TextView
            android:id="@+id/tv_hw_show"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_line"
            android:layout_centerHorizontal="true"
            android:text="请输入成绩"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btn_hw_scanCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@drawable/btn_scancode"
            android:text="扫码"
            android:textColor="#ffffff"
            android:textSize="16sp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tv_hw_show1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/tv_line"
            android:layout_centerHorizontal="true"
            android:text="保存成功"
            android:textSize="20sp" />
    </RelativeLayout>

</LinearLayout>